--- a/ClientPort/App/Profile/Partials/Profile.html
+++ b/ClientPort/App/Profile/Partials/Profile.html
@@ -32,34 +32,38 @@
     <div class="row">
         <div class="col-md-12">
             <div class="well" style="min-height: 300px">
-               
-                    <div class="bc-widget">
-                        <div class="panel-group" id="accordion">
-                            <div class="panel panel-default">
-                                 <div id="collapseOne" class="panel-collapse collapse in">
-                                    <div class="panel-body">
-                                        <p>Notes <a ng-href="#/note/{{$scope.DashboardId}}">Click Here</a></p>
-                                    </div>
+
+                <div class="bc-widget">
+                    <div class="panel-group" id="accordion">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Notes</a>
+                                </h4>
+                            </div>
+                            <div id="collapseTwo" class="panel-collapse collapse">
+                                <div class="panel-body">
+                                    <p>Messages <a ng-href="#/note/{{$scope.DashboardId}}">Click Here</a></p>
                                 </div>
                             </div>
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <h4 class="panel-title">
-                                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Favorites</a>
-                                    </h4>
-                                </div>
-                                <div id="collapseTwo" class="panel-collapse collapse">
-                                    <div class="panel-body">
-                                        <p>Messages <a ng-href="#/message/{{$scope.DashboardId}}" >Click Here</a></p>
-                                    </div>
+                        </div><div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Messages</a>
+                                </h4>
+                            </div>
+                            <div id="collapseTwo" class="panel-collapse collapse">
+                                <div class="panel-body">
+                                    <p>Messages <a ng-href="#/message/{{$scope.DashboardId}}">Click Here</a></p>
                                 </div>
                             </div>
-                          
                         </div>
+
                     </div>
                 </div>
             </div>
-       
+        </div>
+
 
     </div>
 </div>
