--- a/ClientPort/App/notes/partials/notes.html
+++ b/ClientPort/App/notes/partials/notes.html
@@ -3,7 +3,7 @@
     <div class="col-xs-12">
         <div class="btn-group pull-left">
             <button type="button" class="btn btn-primary" ng-click="model.saveNotes()"><i class="fa fa-save"></i> Save</button>
-            <button type="button" class="btn btn-success" ng-click="model.confirm()"><i class="fa fa-backward"></i> Back</button>
+            <a class="btn btn-success" ng-href="#/home"><i class=" fa fa-backward"></i> Back</a>
 
         </div>
     </div>
@@ -20,7 +20,7 @@
                     <div class="form-group">
 
                         <div class="col-sm-7 ">
-                            <textarea style="white-space:pre" class="form-control" id="usernote" rows="7" ng-model="model.note" ng-pattern="/^[a-zA-Z0-9., _ \n$@-]*$/" notes-error-check="notes-error-check"></textarea>
+                            <textarea style="white-space:pre" class="form-control" id="usernote" rows="7" ng-model="model.note" ng-pattern="/^[a-zA-Z0-9., _ \n$@-]*$/" required restrict-characters></textarea>
                         </div>
 
                     </div>
@@ -40,6 +40,26 @@
 
 </div>
 
+<div id="myModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Error </h4>
+            </div>
+            <div class="modal-body">
+                <p>{{messagemodal}} </p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
+</div>
+
 <div class="bc-widget">
     <form class="form-inline" role="group">
 
@@ -50,23 +70,21 @@
         </div>
     </form>
 
-    <div class="content">
+    <div class="well">
         <div class="row" style="padding:20px; ">
             <form class=" form-compressed" role="form">
                 <table id="usernotestable" class="table table-responsive table-bordered table-striped">
                     <tr class="title">
-                        <th style="width:150px">Created Date</th>
+                        <th style="width:150px">Title</th>
                         <th>Notes</th>
-
                     </tr>
-                    <tr ng-repeat="row in notes | orderBy : 'createdDate': true">
-                        <td style="width:100px">{{date | date:'yyyy-MM-dd'}} </td>
-                        <td style="white-space:pre">{{row.note }}</td>
-
+                    <tr ng-repeat="(key, value) in notes">
+                        <!--<td style="width:100px">{{date | date:'yyyy-MM-dd'}} </td>-->
+                        <td style="white-space:pre">{{value.title}}</td>
+                        <td style="white-space:pre">{{value.noteContent.note}}</td>
+                        <td><button type="button" ng-click="model.deleteNote(key)">Delete</button> </td>
                     </tr>
                 </table>
-
-
 
             </form>
         </div>
