--- a/ClientPort/App/notes/partials/notes.html
+++ b/ClientPort/App/notes/partials/notes.html
@@ -18,9 +18,10 @@
                 <div class="col-sm-offset-2">
 
                     <div class="form-group">
-
+                        
                         <div class="col-sm-7 ">
-                            <textarea style="white-space:pre" class="form-control" id="usernote" rows="7" ng-model="model.note" ng-pattern="/^[a-zA-Z0-9., _ \n$@-]*$/" required restrict-characters></textarea>
+                            Title:<input class="success" type="text" />
+                            <textarea   style="white-space:pre" class="form-control " id="usernote" rows="7" ng-model="model.note" ng-pattern="/^[a-zA-Z0-9., _ \n$@-]*$/" required restrict-characters></textarea>
                         </div>
 
                     </div>
@@ -61,33 +62,89 @@
 </div>
 
 <div class="bc-widget">
-    <form class="form-inline" role="group">
-
-        <div class="form-group col-sm-12">
-            <div class="btn-group pull-right" role="group">
-                <button id="getnotesbutton" type="button" class="btn btn-info" ng-click="model.getNotes()"><i class="fa fa-refresh"></i> Refresh</button>
-            </div>
-        </div>
-    </form>
-
+  
     <div class="well">
-        <div class="row" style="padding:20px; ">
-            <form class=" form-compressed" role="form">
-                <table id="usernotestable" class="table table-responsive table-bordered table-striped">
-                    <tr class="title">
-                        <th style="width:150px">Title</th>
-                        <th>Notes</th>
-                    </tr>
-                    <tr ng-repeat="(key, value) in notes">
-                        <!--<td style="width:100px">{{date | date:'yyyy-MM-dd'}} </td>-->
-                        <td style="white-space:pre">{{value.title}}</td>
-                        <td style="white-space:pre">{{value.noteContent.note}}</td>
-                        <td><button type="button" ng-click="model.deleteNote(key)">Delete</button> </td>
-                    </tr>
-                </table>
+        
+        
+        <form class="form-inline" role="group">
+
+            <div class="form-group ">
+                <div class="btn-group " role="group">
+                    <button id="getnotesbutton" type="button" class="btn btn-info btn-sm" ng-click="model.getNotes()"><i class="fa fa-refresh"></i> Refresh</button>
+                </div>
+            </div>
+            <div class="form-group  pull-right ">
+                <div class="btn-group" role="group">
+                    <div class=" btn btn-block">Existing Notes</div>
+                </div>
+            </div>
+        </form>
+
+        <div class="row">
+           
+            <form class=" form" role="form">
+                
+                <div class="thumbnail">
+                    
+                    <table id="usernotestable" class="table table-striped  ">
+                        <tr class="title">
+                            <th style="width:150px">Title</th>
+                            <th>Notes</th>
+                            <th>Actions</th>
+                        </tr>
+                        <tr ng-repeat="(key, value) in notes"   >
+
+                            <td class="info" style="white-space:pre">{{value.title}}</td>
+                            <td class="info" style="white-space:pre">{{value.noteContent.note}}</td>
+
+                            <td>
+                                <div class="btn-group" dropdown>
+                                    <button class="btn btn-success dropdown-toggle" dropdown-toggle type="button">
+                                        Action <span class=" fa fa-caret-square-o-down"></span>
+                                    </button>
+                                    <ul class="dropdown-menu">
+                                        <li><button type="button" class="btn btn-danger" ng-click="model.deleteNote(key)">Delete</button></li>
+                                        <li><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#editModal" >Edit</button></li>
+
+
+                                    </ul>
+
+                                </div>
+                            </td>
+                            <td>
+                                <!-- Modal -->
+                                <div id="editModal" class="modal fade" role="dialog">
+                                    <div class="modal-dialog">
+
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                                <h4 class="modal-title">Edit Note</h4>
+                                            </div>
+                                            <div class="modal-body">
+                                                <textarea style="white-space:pre" class="form-control" id="usernote" rows="7" ng-bind="value.noteContent.note" ng-pattern="/^[a-zA-Z0-9., _ \n$@-]*$/" required restrict-characters></textarea>
+                                 
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-success" onclick="model.updateNote">Save</button>
+                                                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+
+                    </table>
+                </div>
 
             </form>
         </div>
+
+     
+       
+
     </div>
 </div>
 
