--- a/ClientPort/App/Home/partials/home.html
+++ b/ClientPort/App/Home/partials/home.html
@@ -3,9 +3,9 @@
 <div class="container-fluid" style="background-color:ButtonFace">
 
     <ul class="nav nav-pills" role="tablist">
-        <li role="presentation" class="active"><a href="#">Home <span class="badge">42</span></a></li>
+        <li role="presentation" class="active"><a >Home <span class="badge">42</span></a></li>
         <li role="presentation" class="active"><a ng-href="#/profile/{{$scope.DashboardId}}">Profile </a></li>
-        <li role="presentation" class="active"><a ng-href="#/message/{{$scope.DashboardId}}">Messages <span class="badge">3</span></a></li>
+        <li role="presentation" class="active"><a ng-href="#/note/{{$scope.DashboardId}}">Messages <span class="badge">3</span></a></li>
         <li role="presentation" class="active"><a ng-href="#/message/{{$scope.DashboardId}}">Recent Buzzes <span class="badge">42</span></a></li>
         <li role="presentation" class="active"><a href="#">Assets</a></li>
         <li role="presentation" class="active"><a href="#">Recent Blogs <span class="badge">3</span></a></li>
